💄 index 페이지 문구 및 간격 수정

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         "@type": "WebSite",
         "name": "POKEMON CARD COLLECTION",
         "url": "https://pokemon-cc.netlify.app",
-        "logo": "",
+        "logo": "https://pokemon-cc.netlify.app/favicon/ball.ico",
         "description": "1세대 포켓몬 카드를 수집하는 게임형 UI 프로젝트입니다. 팀 404 Not Found가 제작하였으며 비상업적 목적입니다.",
         "member": [
           {
@@ -131,7 +131,7 @@
               />
               <h2 class="eng-pixel">
                 INHWAN <br />
-                <strong>DESIGN</strong>
+                <strong>AD / Developer</strong>
               </h2>
             </div>
             <div class="swiper-slide">
@@ -141,7 +141,7 @@
               />
               <h2 class="eng-pixel">
                 CHAEEUN <br />
-                <strong>SLOW POKE</strong>
+                <strong>CD / Developer</strong>
               </h2>
             </div>
             <div class="swiper-slide">
@@ -152,7 +152,7 @@
               />
               <h2 class="eng-pixel">
                 JUNHWAN <br />
-                <strong>PL</strong>
+                <strong>PL / Developer</strong>
               </h2>
             </div>
             <div class="swiper-slide">
@@ -162,7 +162,7 @@
               />
               <h2 class="eng-pixel">
                 HANGIL <br />
-                <strong>PM</strong>
+                <strong>Team Leader / PM</strong>
               </h2>
             </div>
           </div>
