✨ 카드드 로딩 모달 추가가

--- a/src/pages/dictionary/dictionary.html
+++ b/src/pages/dictionary/dictionary.html
@@ -120,7 +120,12 @@
     <!-- 카드 이미지 모달 -->
     <div id="card-modal" class="hidden card-modal">
       <div class="card-modal-content">
-        <img id="card-image" src="" alt="카드 이미지" />
+        <img
+          id="loading-image"
+          src="/images/pikachu-run.gif"
+          class="hidden loading-img"
+        />
+        <img id="card-image" src="" class="poke-card" />
       </div>
     </div>
 
