🐛 dialog 태그 div로 변경(사파리 이슈)

--- a/src/pages/town/town.html
+++ b/src/pages/town/town.html
@@ -9,7 +9,11 @@
       href="/public/fonts/Galmuri9.woff"
       crossorigin="anonymous"
     />
-    <link rel="shortcut icon" href="/public/favicon/ball.ico" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="/public/favicon/ball.ico"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="/src/style.css" />
     <link rel="stylesheet" href="./town.css" />
     <script type="module" src="./town.ts"></script>
@@ -108,7 +112,7 @@
           />
         </map>
         <!-- ED: 마을 이미지맵-->
-        <dialog id="userInfoModal" class="user-info-modal d-none">
+        <div id="userInfoModal" class="user-info-modal d-none">
           <ul class="user-info-text">
             <li>
               <button id="userInfoModalCloseBtn" class="modal-close-btn">
@@ -171,7 +175,7 @@
               <img src="../../assets/town/ball.png" alt="몬스터볼" />
             </li>
           </ul>
-        </dialog>
+        </div>
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/image-map-resizer@1.0.10/js/imageMapResizer.min.js"></script>
